# Polynomial-regression

./: README.md
.github/workflows/: ci_cpp.yml  ci_python.yml
Cpp/: CMakeLists.txt
Cpp/demos/: demo_Multi_polynomial_gaussian  demo_Multi_polynomial_x_y_square  demo_cube_function  demo_linear_function
Cpp/include/: data_set.hpp  data_setp.hpp  plot_graph.hpp  plot_graph_3D.hpp
Cpp/src/: Linear_regression_MSE_matrix_inversion.cpp  Multi_Polynomial_regression_MSE_matrix_inversion.cpp  Polynomial_regression_MSE_matrix_inversion.cpp  data_set.cpp  data_setp.cpp  plot_graph.cpp  plot_graph_3D.cpp  plot_graph_demo.cpp  regression_polynomiale.cpp  regression_polynomiale_2D.cpp  test_structures_pointeurs.cpp
Python/: Linear_regression_MSE_matrix_inversion.py  Linear_regression_MSE_vector_projection.py  MSE_phase_space_search.py  Multi_Polynomial_regression_MSE_matrix_inversion.py  environment.yml  pivot_gauss.py
